--- a/package.json
+++ b/package.json
@@ -5,14 +5,20 @@
   "scripts": {
     "start": "nodemon server.js",
     "start:prod": "NODE_ENV=production nodemon server.js",
-    "debug": "ndb server.js"
+    "debug": "ndb server.js",
+    "watch:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js",
+    "build:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js"
   },
   "author": "Muideen Popoola",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
+    "@elasticemail/elasticemail-client": "^4.0.23",
+    "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
-    "cookie-parser": "^1.4.6",
+    "cookie-parser": "^1.4.7",
+    "core-js": "^3.39.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
@@ -20,12 +26,16 @@
     "express-rate-limit": "^7.4.0",
     "helmet": "^7.1.0",
     "hpp": "^0.2.3",
+    "html-to-text": "^9.0.5",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.15",
     "pug": "^3.0.3",
+    "sharp": "^0.33.5",
     "slugify": "^1.6.6",
+    "stripe": "^17.3.1",
     "validator": "^13.12.0",
     "xss-clean": "^0.1.4"
   },
@@ -41,6 +51,7 @@
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.35.0",
     "globals": "^15.9.0",
+    "parcel-bundler": "^1.12.5",
     "prettier": "^3.3.3"
   }
 }
