Ready for deployment

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start:prod": "NODE_ENV=production nodemon server.js",
     "debug": "ndb server.js",
     "watch:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js",
-    "build:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js"
+    "build:js": "parcel build ./public/js/index.js --out-dir ./public/js --out-file bundle.js"
   },
   "author": "Muideen Popoola",
   "license": "ISC",
@@ -17,6 +17,7 @@
     "@elasticemail/elasticemail-client": "^4.0.23",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
+    "compression": "^1.7.5",
     "cookie-parser": "^1.4.7",
     "core-js": "^3.39.0",
     "cors": "^2.8.5",
