--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "start:prod": "NODE_ENV=production nodemon server.js",
     "debug": "ndb server.js",
     "watch:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js",
@@ -54,5 +55,8 @@
     "globals": "^15.9.0",
     "parcel-bundler": "^1.12.5",
     "prettier": "^3.3.3"
+  },
+  "engines": {
+    "node": ">=10.0.0"
   }
 }
